# coursewagon

./: .gitignore  API_SECURITY_SUMMARY.md  CACHING_ARCHITECTURE_DIAGRAM.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DARK_MODE_IMPLEMENTATION.md  DARK_MODE_LEARNING_PROFILE_IMPLEMENTATION.md  DARK_MODE_README.md  DARK_MODE_VISUAL_CHANGES.md  DARK_MODE_VISUAL_GUIDE.md  DEPLOYMENT_CACHING_GUIDE.md  DOCUMENTATION_SUMMARY.md  GEMINI_MEDIA_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  LEARNER_IMPLEMENTATION_SUMMARY.md  LICENSE  MEDIA_IMPLEMENTATION.md  MIGRATION_FIXES.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROBLEM.md  QUICK_START_CACHING.md  README.md  SECURITY.md  SYSTEM_ARCHITECTURE.md  firebase.json
python-server/: .dockerignore  .env.example  .gcloudignore  .gitignore  API_SECURITY.md  Dockerfile  Dockerfile.production  FIREBASE_SETUP.md  GITHUB_ACTIONS_TEST.md  app.py  config.py  extensions.py  pyproject.toml  requirements.txt  test_chart_processing.py  test_config.py  test_storage.py  update_storage.sh  upload-secrets.sh
python-server/admin/: models.py  repository.py  routes.py  service.py
python-server/agents/: content_agents.py  curriculum_agents.py  schemas.py
python-server/docs/: AZURE_DEPLOYMENT_COMPLETE_GUIDE.md  AZURE_DEPLOYMENT_GUIDE.md  CACHING_OPTIMIZATION.md  DEPLOYMENT_SUMMARY.md  DNS_SETUP_GUIDE.md  RATE_LIMITING.md  RATE_LIMITING_IMPLEMENTATION_SUMMARY.md  README_SECURITY.md
python-server/middleware/: FASTAPI_MIGRATION_GUIDE.md  auth_middleware.py  origin_validation_middleware.py
python-server/migrations/: add_course_reviews.py  add_database_indexes.py  add_email_verification.py  add_enrollment_composite_index.py  add_image_url_columns.py  add_learner_functionality.py  add_media_table.sql  add_video_url_to_content.py  add_welcome_email_sent_column.py  migrate_structure.py  remove_api_key_columns.py
python-server/models/: __init__.py  chapter.py  content.py  course.py  course_review.py  email_verification.py  enrollment.py  learning_progress.py  media.py  password_reset.py  schemas.py  subject.py  testimonial.py  topic.py  user.py
python-server/repositories/: chapter_repo.py  content_repo.py  course_repo.py  course_review_repository.py  email_verification_repository.py  enrollment_repository.py  learning_progress_repository.py  media_repo.py  password_reset_repository.py  subject_repo.py  testimonial_repo.py  topic_repo.py  user_repository.py
python-server/routes/: auth_routes.py  chapter_routes.py  content_routes.py  course_routes.py  enrollment_routes.py  image_routes.py  learning_routes.py  media_routes.py  review_routes.py  subject_routes.py  test_auth_routes.py  testimonial_routes.py  topic_routes.py  utility_routes.py
python-server/scripts/: azure-deploy.sh  deploy-complete.sh  get-app-url.sh  manage-env-vars.sh  quick-update.sh  setup-azure-storage.sh  setup-azure.sh  setup-github-secrets.sh  (+3 more)
(+403 files in other folders)
